--- a/IAS_8bit.cbp
+++ b/IAS_8bit.cbp
@@ -32,11 +32,14 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Unit filename="src/Colour.cpp" />
+		<Unit filename="src/Colour.h" />
 		<Unit filename="src/IASAssembler.cpp" />
 		<Unit filename="src/IASAssembler.h" />
 		<Unit filename="src/IASComputer.cpp" />
 		<Unit filename="src/IASComputer.h" />
 		<Unit filename="src/main.cpp" />
+		<Unit filename="tests/add.ias" />
 		<Unit filename="tests/test1.ias" />
 		<Extensions>
 			<code_completion />
