remove unneeded print statements

--- a/IAS_8bit.cbp
+++ b/IAS_8bit.cbp
@@ -29,6 +29,8 @@
 			</Target>
 		</Build>
 		<Compiler>
+			<Add option="-Winit-self" />
+			<Add option="-pedantic" />
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
