--- a/IAS_8bit.cbp
+++ b/IAS_8bit.cbp
@@ -2,21 +2,28 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="IAS_8bit" />
+		<Option title="IAS_8Bit" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/IAS_8bit" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/IAS_8Bit" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add library="sfml-audio-d" />
+					<Add library="sfml-network-d" />
+					<Add library="sfml-graphics-d" />
+					<Add library="sfml-window-d" />
+					<Add library="sfml-system-d" />
+				</Linker>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/IAS_8bit" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/IAS_8Bit" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -25,15 +32,36 @@
 				</Compiler>
 				<Linker>
 					<Add option="-s" />
+					<Add library="sfml-network" />
+					<Add library="sfml-audio" />
+					<Add library="sfml-graphics" />
+					<Add library="sfml-window" />
+					<Add library="sfml-system" />
 				</Linker>
 			</Target>
 		</Build>
 		<Compiler>
-			<Add option="-Winit-self" />
-			<Add option="-pedantic" />
 			<Add option="-Wall" />
+			<Add option="-std=c++17" />
 			<Add option="-fexceptions" />
+			<Add directory="D:/_Programming Libraries/C++/SFML/MinGW32/include" />
 		</Compiler>
+		<Linker>
+			<Add directory="D:/_Programming Libraries/C++/SFML/MinGW32/lib" />
+		</Linker>
+		<Unit filename="libgcc_s_sjlj-1.dll" />
+		<Unit filename="libstdc++-6.dll" />
+		<Unit filename="openal32.dll" />
+		<Unit filename="sfml-audio-2.dll" />
+		<Unit filename="sfml-audio-d-2.dll" />
+		<Unit filename="sfml-graphics-2.dll" />
+		<Unit filename="sfml-graphics-d-2.dll" />
+		<Unit filename="sfml-network-2.dll" />
+		<Unit filename="sfml-network-d-2.dll" />
+		<Unit filename="sfml-system-2.dll" />
+		<Unit filename="sfml-system-d-2.dll" />
+		<Unit filename="sfml-window-2.dll" />
+		<Unit filename="sfml-window-d-2.dll" />
 		<Unit filename="src/Colour.cpp" />
 		<Unit filename="src/Colour.h" />
 		<Unit filename="src/IASAssembler.cpp" />
@@ -48,6 +76,7 @@
 			<code_completion />
 			<envvars />
 			<debugger />
+			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
