--- a/IAS_8bit.cbp
+++ b/IAS_8bit.cbp
@@ -64,15 +64,15 @@
 		<Unit filename="sfml-window-d-2.dll" />
 		<Unit filename="src/Colour.cpp" />
 		<Unit filename="src/Colour.h" />
-		<Unit filename="src/GUI/NormalCell.cpp">
-			<Option target="&lt;{~None~}&gt;" />
-		</Unit>
+		<Unit filename="src/GUI/IASFrontEnd.cpp" />
+		<Unit filename="src/GUI/IASFrontEnd.h" />
+		<Unit filename="src/GUI/MemoryCell.cpp" />
+		<Unit filename="src/GUI/NormalCell.cpp" />
+		<Unit filename="src/GUI/Section.cpp" />
 		<Unit filename="src/IASAssembler.cpp" />
 		<Unit filename="src/IASAssembler.h" />
 		<Unit filename="src/IASComputer.cpp" />
 		<Unit filename="src/IASComputer.h" />
-		<Unit filename="src/IASFrontEnd.cpp" />
-		<Unit filename="src/IASFrontEnd.h" />
 		<Unit filename="src/main.cpp" />
 		<Unit filename="tests/add.ias" />
 		<Unit filename="tests/multiply.ias" />
